aul03/ingress/http/ingress-nginx.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dexter-ingress
spec:
  rules:
  - host: nginx.dexter.com.br
    http:
      paths:
      - backend:
          serviceName: nginx-service
          servicePort: 80
